# ocr-calculator

./: .gitignore  platformio.ini
.github/workflows/: build.yml  unit-tests.yml
boards/: board.h
boards/stm32h753/: gpio.h  i2c.h  ili9341.h  ov7670.h  spi.h
docs/: ili9341_datasheet.md  ov7670_datsheet.md
ml/src/: convert_tflite.py  data_loader.py  image_to_array.py
ml/test/: test_model.py  test_tflite.py
ocr/: requirements.txt
ocr/src/: convert_tflite.py  data_loader.py  model.py  train.py
ocr/test/: test_data_loader.py
scripts/: build.sh  run_native_tests.sh
src/bsp/: bsp.h
src/bsp/stm32h7xx_nucleo/: bsp_gpio.cpp  bsp_gpio.h  bsp_i2c.cpp  bsp_i2c.h  bsp_ili9341.cpp  bsp_ili9341.h  bsp_iwdg.h  bsp_ov7670.cpp  bsp_ov7670.h  bsp_spi.cpp  bsp_spi.h  stm32h7xx_nucleo.h  sysclk.cpp  sysclk.h
src/common/assert/: assert.cpp  assert.h
src/common/gpio_types/: gpio_types.h
src/common/include/: bounding_box.h  image.h
src/common/log/: log.cpp  log.h
src/common/pin_utils/: pin_utils.h
src/common/status/: status.h
src/common/systick/: systick.cpp  systick.h  systick_base.h
src/drivers/camera/: camera_base.h
src/drivers/camera/ov7670/: ov7670.cpp  ov7670.h  ov7670_config.h
src/drivers/display/: display_base.h
src/drivers/display/ili9341/: ili9341.cpp  ili9341.h  ili9341_config.h
src/drivers/gpio/: gpio.cpp  gpio.h  gpio_base.h  gpio_config.h  gpio_types.h
src/drivers/i2c/: i2c.cpp  i2c.h  i2c_base.h  i2c_config.h
src/drivers/iwdg/: iwdg.cpp  iwdg.h
src/drivers/spi/: spi.cpp  spi.h  spi_base.h  spi_config.h
src/modules/button/: button.cpp  button.h
src/modules/camera/: camera.cpp  camera.h
src/modules/controllers/button_controller/: button_controller.cpp  button_controller.h
src/modules/inference/: inference.cpp  inference.h  model.h
src/modules/parser/: parser.cpp  parser.h
src/modules/segmenter/: segmenter.cpp  segmenter.h
test/: CMakeLists.txt
test/test_button/: mock_gpio.h  test_button.cpp
test/test_camera/: mock_camera.h  test_camera.cpp
test/test_inference/: sample_image.h  test_inference.cpp
test/test_parser/: test_parser.cpp
test/test_segmenter/: test_segmenter.cpp
